# autotools-scripts

./: .gitignore  Makefile.am  README.md  autotools-script-demo.sh  bootstrap  configure.ac  data.txt  input.sh  other.sh
